@startuml Class_TaiKhoan_HoSo
title Sơ đồ Lớp - Phân hệ Tài khoản & Hồ sơ Học viên

skinparam classAttributeIconSize 0
skinparam classFontSize 13

class User {
  +id: bigint
  +ho_ten: string
  +email: string
  --password: string
  +role: enum {admin, giang_vien, hoc_vien}
  +so_dien_thoai: string?
  +is_active: boolean
  +otp: string?
  +otp_expires_at: datetime?
  +created_at: datetime
  +updated_at: datetime
  --
  +getJWTIdentifier()
  +getJWTCustomClaims()
}

class GiangVien {
  +id: bigint
  +user_id: bigint <<FK>>
  +chuyen_mon: enum {ly_thuyet, thuc_hanh, ca_hai}
  +bang_cap: string?
  +nam_kinh_nghiem: int
  +ghi_chu: text?
  +created_at: datetime
  +updated_at: datetime
}

class HoSoHocVien {
  +id: bigint
  +user_id: bigint? <<FK>>
  +khoa_hoc_id: bigint <<FK>>
  +ho_ten: string
  +ngay_sinh: date
  +so_cccd: string <<unique>>
  +dia_chi: string?
  +so_dien_thoai: string?
  +email: string?
  +anh_the: string?
  +nguon_dang_ky: enum {online, offline}
  +trang_thai_hoc_phi: enum {chua_dong, da_dong}
  +hoc_phi_da_dong: decimal
  +ngay_dong_hoc_phi: datetime?
  +trang_thai: enum
  +ghi_chu: text?
  +created_at: datetime
  +updated_at: datetime
}

class ThanhToanHocPhi {
  +id: bigint
  +ho_so_id: bigint <<FK>>
  +so_tien: decimal
  +phuong_thuc: enum {tien_mat, chuyen_khoan, vnpay, momo}
  +ma_giao_dich: string?
  +trang_thai: enum {cho_xu_ly, thanh_cong, that_bai}
  +nguoi_thu: string?
  +ghi_chu: text?
  +ngay_thanh_toan: datetime
  +created_at: datetime
  +updated_at: datetime
}

note right of HoSoHocVien
  trang_thai:
  cho_dong_hoc_phi → cho_mo_lop
  → dang_hoc → du_dieu_kien_thi_tn
  → hoan_thanh_tn → da_cap_bang
end note

User "1" --o "0..1" GiangVien : có profile >
User "1" --o "0..1" HoSoHocVien : tài khoản <
HoSoHocVien "1" --o "0..*" ThanhToanHocPhi : ghi nhận >

@enduml
